# airbuggy

./: Dockerfile  LICENSE  README.md  startup.sh
docker/: Dockerfile  entrypoint.sh
quadrotor/: CMakeLists.txt  package.xml
quadrotor/include/quadrotor/: quadrotor_plugin.hpp
quadrotor/launch/: robot.launch.py  spawn_robot_ros2.launch.py
quadrotor/scripts/: spawn_object.py
quadrotor/src/: quadrotor_plugin.cpp
quadrotor/urdf/: camera.xacro  quadrotor.urdf.xacro
quadrotor/worlds/: empty_world.world
